# potsie

./: .gitignore  .gitlint  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose-superset.yml  docker-compose.yml
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug_report.md  Feature_request.md  Support_question.md
docker/files/etc/acl/: logging.json
docker/files/etc/caddy/: Caddyfile
env.d/: acl  app  grafana  hooks  mysql  postgresql
etc/grafana/provisioning/dashboards/: potsie.yaml
etc/grafana/provisioning/datasources/: elasticsearch.yaml  mysql.yaml  postgresql.yml  sqlite.yaml
fixtures/mysql/: edxapp.sql
fixtures/postgresql/: marsha.sql
fixtures/sqlite/: edxapp.db
scripts/: create_es_index.sh  patch_statements_date.py  users-permissions.sh
src/acl/: .pylintrc  Dockerfile  setup.cfg
src/acl/acl/: edx.py  exceptions.py  grafana.py  main.py  settings.py
src/acl/tests/: conftest.py  test_edx.py  test_grafana.py  test_main.py
src/dashboards/: common.libsonnet  utils.libsonnet
src/dashboards/marsha/: common.libsonnet  video.jsonnet
src/dashboards/platform/: general.jsonnet
src/dashboards/teachers/: common.libsonnet  course.jsonnet  details.jsonnet  home.jsonnet
src/dashboards/videos/: common.libsonnet  course.jsonnet  details.jsonnet  statements.jsonnet
src/hooks/: post-deploy
src/plugins/: package.json
src/plugins/stacked-barchart/: .gitignore  CHANGELOG.md  package.json
src/plugins/stacked-barchart/src/: SimplePanel.tsx  module.ts  plugin.json
superset/pythonpath_dev/: superset_config.py
