;;
;; ACL package
;;
[metadata]
name = potsie-acl-proxy
version = 0.3.0
description = An ACL proxy for Grafana
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://openfun.github.io/potsie/
license = MIT
keywords = ACL, Grafana, Analytics, xAPI, LRS
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
install_requires =
    aiohttp==3.8.1
    databases[mysql]==0.5.4
    fastapi==0.70.1
    pydantic[email]==1.9.0
    uvicorn[standard]==0.16.0
package_dir =
    =.
packages = find:
zip_safe = True
python_requires = >= 3.9

[options.extras_require]
dev =
    bandit==1.7.1
    black==21.10b0
    databases[postgresql]==0.5.4
    flake8==4.0.1
    isort==5.10.1
    pylint==2.12.2
    pytest==6.2.5
    pytest-asyncio==0.17.2
    pytest-cov==3.0.0
    requests==2.27.1
ci =
    twine==3.7.1

[options.packages.find]
where = .

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*

[isort]
known_potsie_acl_proxy=
sections=FUTURE,STDLIB,THIRDPARTY,POTSIE_ACL_PROXY,FIRSTPARTY,LOCALFOLDER
skip_glob=venv
profile=black

[tool:pytest]
addopts = -v --cov-report term-missing --cov-config=.coveragerc --cov=acl
asyncio_mode = auto
python_files =
    test_*.py
    tests.py
testpaths =
    tests
